Added basic files
.env.example
.gitignore
readme.md
license.txt
license_es.txt

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Google API Keys
 GOOGLE_API_KEY=your_google_api_key_here
-GOOGLE_SITES_API_KEY=your_google_sites_api_key_here 
+GOOGLE_SITES_API_KEY=your_google_sites_api_key_here
+
+# Firebase Configuration
+FIREBASE_WEB_CLIENT_ID=your_firebase_web_client_id_here 
